fix layout bug approval

--- a/src/app/layout/pages/main-layout/main-layout.component.scss
+++ b/src/app/layout/pages/main-layout/main-layout.component.scss
@@ -1,7 +1,6 @@
 @import '../../../../styles/variables/fonts';
 #main-layout-container {
 	margin-top: 113px;
-	padding-top: 20px;
 }
 
 @font-face {
